@@ -1,144 +1,153 @@
-buildscript {
-    repositories { 
-        mavenLocal()
-        jcenter()
-        mavenCentral()
-    }
-    
-	 repositories {
-    maven {
-      url "https://plugins.gradle.org/m2/"
-    }
-  }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.2.RELEASE")
-        classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.9.2'
-        classpath 'net.researchgate:gradle-release:2.6.0'
-    }
-}
-
+/*
+ * Copyright 2021 Karlsruhe Institute of Technology.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 plugins { 
-    id 'io.franzbecker.gradle-lombok' version '1.14'
+    id "io.freefair.lombok" version "6.1.0"
+    id "io.freefair.maven-publish-java" version "6.1.0"
     id "io.spring.dependency-management" version "1.0.8.RELEASE" 
     id "com.github.kt3k.coveralls" version "2.8.1" 
     id "org.owasp.dependencycheck" version "3.1.2"
-    id "org.asciidoctor.convert" version "1.5.3"
+    id "org.asciidoctor.jvm.convert" version "3.3.2"
     id "org.ajoberstar.grgit" version "2.0.1"
     id "com.jfrog.bintray" version "1.7.3"
+    id "java"
+    id "jacoco"
+    // plugins for release and publishing to maven repo
+    id "signing"
+    id "net.researchgate.release" version "2.8.1"
+    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
+    id 'maven-publish'
 }
-ext { springBootVersion = '2.2.2.RELEASE' }
-
-apply plugin: 'java-library'
-apply plugin: 'eclipse'
-apply plugin: 'maven'
-apply plugin: 'jacoco'
+ext { 
+    springBootVersion = '2.4.10' 
+    springDocVersion  = '1.5.6'
+    javersVersion     = '6.2.3'
+}
 
 description = "Core module for data repositories based on metadata model of datacite."
-
 group = 'edu.kit.datamanager'
-
-jar {
-    baseName = 'repo-core'
-    version = System.getenv('version')
-}
-
-repositories {
-    mavenLocal() 
-    jcenter()
-    mavenCentral()
-}
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
  
+jar {
+    archiveBaseName = 'repo-core'
+    archiveVersion = System.getenv('version')
+}
+
+println "Building ${name} version: ${version}"
+println "Running gradle version: $gradle.gradleVersion"
+println "JDK version: ${JavaVersion.current()}"
+
+repositories {
+    mavenLocal() 
+    mavenCentral()
+}
+
 configurations {
     all*.exclude module : 'spring-boot-starter-logging'
 }
 
-lombok {
-    version = '1.18.10'
-    sha256 = ""
+if (project.hasProperty('release')) {
+    println 'Using \'release\' profile for building ' + project.getName()
+    apply from: 'gradle/profile-deploy.gradle'
 }
 
 dependencies {
     // Spring
-    api("org.springframework.boot:spring-boot-starter-data-rest")
-    api("org.springframework.boot:spring-boot-starter-amqp")
-    api("org.springframework.boot:spring-boot-starter-web")
-    api("org.springframework.boot:spring-boot-starter-security")
-    api("org.springframework.boot:spring-boot-starter-actuator")
-    api("org.springframework.boot:spring-boot-starter-data-jpa")
-    
-    api("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR3")
-    api("org.springframework.cloud:spring-cloud-starter:2.2.3.RELEASE")
+    implementation 'org.springframework:spring-messaging:5.3.9'
+    // Spring Boot
+    implementation "org.springframework.boot:spring-boot-starter-data-rest"
+    implementation "org.springframework.boot:spring-boot-starter-amqp"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+   
+//    implementation "org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR3"
+//    implementation "org.springframework.cloud:spring-cloud-starter:2.2.3.RELEASE"
     // springdoc
-    api("org.springdoc:springdoc-openapi-ui:1.2.31")
-    api("org.springdoc:springdoc-openapi-data-rest:1.2.31")
-    api("org.springdoc:springdoc-openapi-webmvc-core:1.2.31")
+    implementation "org.springdoc:springdoc-openapi-ui:${springDocVersion}"
+    implementation "org.springdoc:springdoc-openapi-data-rest:${springDocVersion}"
+    implementation "org.springdoc:springdoc-openapi-webmvc-core:${springDocVersion}"
     // apache
-    api('commons-codec:commons-codec:1.7')
-    api("commons-configuration:commons-configuration:1.10")
-    api("commons-io:commons-io:2.5")
-    api("commons-validator:commons-validator:1.6")
-    api("org.apache.commons:commons-collections4:4.1")
-    api("org.apache.commons:commons-lang3:3.6")
-    api("org.apache.commons:commons-text:1.8")
-    api('org.apache.httpcomponents:httpclient:4.5.6')
-    api("org.apache.tika:tika-core:1.18") 
-  //  api("org.javers:javers-core:5.8.7")
-    api('org.javers:javers-spring-boot-starter-sql:5.8.8')
+    implementation "commons-configuration:commons-configuration:1.10"
+    implementation "commons-io:commons-io:2.11.0"
+    implementation "org.apache.commons:commons-collections4:4.4"
+    // includes commons-lang3
+    implementation "org.apache.commons:commons-text:1.9"
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation "org.apache.tika:tika-core:1.27"
+    // javers
+    implementation "org.javers:javers-spring-boot-starter-sql:${javersVersion}"
     // Database
-    api("com.h2database:h2:1.4.194")
-    api("org.postgresql:postgresql:42.2.1")
+    implementation "com.h2database:h2:1.4.200"
+    implementation "org.postgresql:postgresql:42.2.1"
     // XML
-    api("com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.1")
-    api("com.fasterxml.jackson.module:jackson-module-afterburner:2.7.1")
-    api("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.5")
-    api("com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.0")
+    implementation "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.1"
+    implementation "com.fasterxml.jackson.module:jackson-module-afterburner:2.7.1"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.5"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.0"
 
-    api("com.monitorjbl:spring-json-view:1.0.1")
+    implementation "com.monitorjbl:spring-json-view:1.0.1"
 
-    api("de.codecentric:spring-boot-admin-starter-client:2.1.6")
+    implementation "de.codecentric:spring-boot-admin-starter-client:2.1.6"
 
     //Java 11 Support 
-    api("javax.xml.bind:jaxb-api:2.3.1")
-    api("com.sun.xml.bind:jaxb-core:2.3.0.1")
-    api("com.sun.xml.bind:jaxb-impl:2.3.0.1")
-    api("javax.activation:activation:1.1.1")
-    api("org.javassist:javassist:3.23.1-GA")
+    implementation "javax.xml.bind:jaxb-api:2.3.1"
+    implementation "com.sun.xml.bind:jaxb-core:2.3.0.1"
+    implementation "com.sun.xml.bind:jaxb-impl:2.3.0.1"
+    implementation "javax.activation:activation:1.1.1"
+    implementation "org.javassist:javassist:3.28.0-GA"
     
-    implementation("edu.kit.datamanager:service-base:0.3.0-SNAPSHOT")
-//    api("edu.kit.datamanager:generic-message-consumer:0.2.0")
+    implementation "edu.kit.datamanager:service-base:0.3.0"
+//    implementation "edu.kit.datamanager:generic-message-consumer:0.2.0"
 
-    api("com.github.fge:json-patch:1.9")
-    api("net.sf.dozer:dozer:5.5.1")
+    implementation "com.github.fge:json-patch:1.9"
+    implementation "net.sf.dozer:dozer:5.5.1"
 
-    api("io.jsonwebtoken:jjwt:0.9.1")
+    implementation "io.jsonwebtoken:jjwt:0.9.1"
 
-    api("org.slf4j:slf4j-api:1.7.25")
     // Logging
-    api("ch.qos.logback:logback-classic:1.2.3")
-    api("com.github.fge:json-patch:1.9")
+    implementation "org.slf4j:slf4j-api:1.7.32"
+    implementation "ch.qos.logback:logback-classic:1.2.5"
 
-    testImplementation("com.h2database:h2:1.4.194") 
-    testImplementation("junit:junit:4.12")
-    //testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc:2.0.4.RELEASE')
-    testImplementation("org.springframework:spring-test")
-    testImplementation("org.springframework.security:spring-security-test")
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.springframework:spring-test"
+     // boot starter
+    testImplementation 'org.springframework.boot:spring-boot-starter-validation'    
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.4.RELEASE'
+    testImplementation "org.springframework.security:spring-security-test"
    
     //Java 11 Support 
-    testImplementation("org.mockito:mockito-core:2.23.4")
-    testImplementation("org.powermock:powermock-module-junit4:2.0.2")
-    testImplementation("org.powermock:powermock-api-mockito2:2.0.2")
+    testImplementation "org.mockito:mockito-core:3.12.0"
+    testImplementation "org.powermock:powermock-module-junit4:2.0.9"
+    testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
 
-    testImplementation('org.asciidoctor:asciidoctor-gradle-plugin:1.5.9.2')
-    asciidoctor('org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.4.RELEASE')
-    asciidoctor('com.github.allati.asciidoctor.monotree:asciidoctor-extension-monotree:0.0.1')
+//    testImplementation 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.9.2'
+//    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.4.RELEASE'
+//    asciidoctor 'com.github.allati.asciidoctor.monotree:asciidoctor-extension-monotree:0.0.1'
 }
 
 test {
+    // Allow access to internal methods used by powerMockito
+    // Will fail with Java17
+    if (!JavaVersion.current().isJava8()) {
+        jvmArgs '--illegal-access=permit'
+    }
     testLogging {
         outputs.upToDateWhen {false}
         showStandardStreams = true
@@ -146,7 +155,7 @@ test {
 }
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.7"
 }
 
 tasks.withType(Test) {
@@ -156,8 +165,8 @@ tasks.withType(Test) {
 }
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
     
     afterEvaluate {
@@ -195,5 +204,5 @@ if (JavaVersion.current().isJava8Compatible()) {
             options.addStringOption('Xdoclint:none', '-quiet')
         }
     }
-}
+} 
 
